rename function & changing the depoyment script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "webpack --mode production",
     "dev": "webpack serve",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run test",
+    "deploy": "gh-pages -d build -m 'Automatically update gh-pages [skip ci]"
   },
   "author": "Shepel Dmitry",
   "license": "ISC",
